2008-09-11  Matthias Clasen  <mclasen@redhat.com>

	Merged from trunk:

	Bug 538863 – Fixes assertion on entering empty folder

	* gtk/gtkfilechooserdefault.c (browse_files_select_first_row): Don't
	select the first row if the folder is empty.
	Patch by Olle Bergkvist.

2008-08-27  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gdk/win32/gdkevents-win32.c:
	* gdk/win32/gdkwindow-win32.c (show_window_recurse): Check if
	the window's state has GDK_WINDOW_STATE_MAXIMIZED set before
	calling ShowWindow (), and show using SW_SHOWMAXIMIZED or     
	SW_RESTORE accordingly.  This fixes an issue where maximized 
	windows that are iconified do not restore back to maximized 
	when you click the taskbar. (#528975)

2008-08-21  Cody Russell  <bratsche@gnome.org>

	Merged from trunk:

	* gdk/win32/gdkevents-win32.c (doesnt_want_key): Remove the checks
	to see if the window is modally blocked.  This doesn't get us anything,
	and it confuses the search window in GtkTreeView (and potentially other
	utility windows in other apps).  (#520165)

2008-08-04  Sven Neumann  <sven@gimp.org>

	Merged from trunk:

	* gtk/gtklinkbutton.c (gtk_link_button_set_uri): update the link
	color when the "visited" state is changed.

2008-08-02  Tor Lillqvist  <tml@novell.com>

	Bug 538686 - gtkprintoperation-win32.c: devmode_from_settings

	* gtk/gtkprintoperation-win32.c (devmode_from_settings): Plug
	potential leak. Thanks to Morten Welinder.

2008-08-01  Claudio Saavedra  <csaavedra@igalia.com>

	Bug 545931 – small documentation typos

	* gtk/gtkcomboboxentry.c: Fix some typos in the documentation.

2008-07-30  Tor Lillqvist  <tml@novell.com>

	* gtk/gtkprintoperation-win32.c: Fix problems in handling custom
	paper sizes. The DEVMODE::dmPaperWidth and dmPaperLength are in
	tenths of a millimeter, and the RECT passed to CreateEnhMetaFile()
	is in hundredths of a millimeter. Patch by Sven Neumann.

2008-07-03  Murray Cumming  <murrayc@murrayc.com>
